#ifndef RADIANT_DOM_RANGE_HPP
#define RADIANT_DOM_RANGE_HPP

/**
 * DOM Boundary, Range, Selection — W3C-conformant primitives.
 *
 * These types are owned by the per-document `DocState` (StateStore) and
 * are the canonical source of truth for caret + selection. StateStore keeps
 * private projection structs for renderer/event compatibility while those
 * paths finish migrating to `state->dom_selection` and DomRange layout cache.
 *
 * See vibe/radiant/Radiant_Design_Selection.md for the full design.
 */

#include <stdint.h>
#include <stdbool.h>

// Forward declarations to avoid heavy includes in the header.
struct DomNode;
struct DomText;
struct DomElement;
struct DocState;
struct Pool;
// Projection structs are private to StateStore; public code should use
// StateStore helper APIs rather than dereferencing them.
struct CaretState;
struct SelectionState;

#ifdef __cplusplus
extern "C" {
#endif

// ============================================================================
// DomBoundary — a (node, offset) point in the DOM tree
// ============================================================================
//
// Per WHATWG DOM §5.5, a boundary point's offset is:
//   - for CharacterData (DomText, DomComment): a UTF-16 code-unit offset
//     in [0, length], where length is the number of UTF-16 code units;
//   - for any other node (DomElement, DocumentFragment, etc.): a child
//     index in [0, child_count].
typedef struct DomBoundary {
    DomNode* node;
    uint32_t offset;
} DomBoundary;

typedef enum DomBoundaryOrder {
    DOM_BOUNDARY_BEFORE   = -1,
    DOM_BOUNDARY_EQUAL    =  0,
    DOM_BOUNDARY_AFTER    =  1,
    DOM_BOUNDARY_DISJOINT =  2,  // boundaries lie in different DOM trees
} DomBoundaryOrder;

// Compare two boundary points. Implements the spec's "position of a boundary
// point relative to another boundary point" algorithm.
DomBoundaryOrder dom_boundary_compare(const DomBoundary* a, const DomBoundary* b);

// True iff (node, offset) is a syntactically valid boundary point
// (offset within bounds for the node type).
bool dom_boundary_is_valid(const DomBoundary* b);

// Length of the node for offset purposes:
//   DomText/DomComment: UTF-16 code-unit length of its text data
//   DomElement: number of children
//   anything else: 0
uint32_t dom_node_boundary_length(const DomNode* node);

// Index of `child` within its parent's children list, or UINT32_MAX if no parent.
uint32_t dom_node_child_index(const DomNode* child);

// ============================================================================
// UTF-16 / UTF-8 conversion for DomText offsets
// ============================================================================
//
// DOM-API offsets are UTF-16 code units; Radiant's internal text storage
// (DomText::text) is UTF-8. Conversion happens only at the DOM-API boundary.
// For the common ASCII case both functions return their input unchanged.

uint32_t dom_text_utf16_length(const DomText* t);
uint32_t dom_text_utf16_to_utf8(const DomText* t, uint32_t u16_offset);
uint32_t dom_text_utf8_to_utf16(const DomText* t, uint32_t u8_offset);

// ============================================================================
// DomRange — live range
// ============================================================================
//
// A DomRange owns two boundary points and a cached resolution to the layout
// tree (fields prefixed `start_`/`end_`). The layout cache is filled lazily
// by the resolver and invalidated by `dom_range_invalidate_layout()` after
// reflow or boundary mutation.

typedef struct DomRange {
    DocState* state;            // owning state store
    DomBoundary   start;
    DomBoundary   end;              // start <= end (invariant)
    bool          is_live;          // false for StaticRange (future)
    uint32_t      id;               // monotonic, for diagnostics
    struct DomRange* prev;          // doubly-linked into state->live_ranges
    struct DomRange* next;
    uint32_t      ref_count;        // selection holds 1; JS handle holds 1

    // Layout cache (filled by resolver). When `layout_valid == false` these
    // fields are stale and must be ignored by renderers/input handlers.
    bool   layout_valid;
    void*  start_view;              // View* (RDT_VIEW_TEXT) — opaque here
    int    start_byte_offset;       // UTF-8 byte offset within start_view
    int    start_line, start_column;
    float  start_x, start_y, start_height;
    void*  end_view;
    int    end_byte_offset;
    int    end_line, end_column;
    float  end_x, end_y, end_height;
    float  iframe_offset_x, iframe_offset_y;

    // Host-binding back-pointer (e.g. JS wrapper Item). Owned and managed
    // by the binding layer; the core leaves this slot alone.
    void*  host_wrapper;
} DomRange;

// Lifecycle ------------------------------------------------------------------
DomRange* dom_range_create(DocState* state);
void      dom_range_retain(DomRange* range);
void      dom_range_release(DomRange* range);
void      dom_range_invalidate_layout(DomRange* range);

// Boundary setters (spec algorithms; return true on success, false on
// invalid offset / hierarchy errors). `out_exception` (if non-null) is
// set to a stable string identifying the DOMException name on failure.
bool dom_range_set_start         (DomRange* r, DomNode* node, uint32_t offset, const char** out_exception);
bool dom_range_set_end           (DomRange* r, DomNode* node, uint32_t offset, const char** out_exception);
bool dom_range_set_start_before  (DomRange* r, DomNode* node, const char** out_exception);
bool dom_range_set_start_after   (DomRange* r, DomNode* node, const char** out_exception);
bool dom_range_set_end_before    (DomRange* r, DomNode* node, const char** out_exception);
bool dom_range_set_end_after     (DomRange* r, DomNode* node, const char** out_exception);
void dom_range_collapse          (DomRange* r, bool to_start);
bool dom_range_select_node       (DomRange* r, DomNode* node, const char** out_exception);
bool dom_range_select_node_contents(DomRange* r, DomNode* node, const char** out_exception);

// Inspection
bool dom_range_collapsed(const DomRange* r);
DomNode* dom_range_common_ancestor(const DomRange* r);

typedef enum DomRangeCompareHow {
    DOM_RANGE_START_TO_START = 0,
    DOM_RANGE_START_TO_END   = 1,
    DOM_RANGE_END_TO_END     = 2,
    DOM_RANGE_END_TO_START   = 3,
} DomRangeCompareHow;

// Returns -1, 0, 1, or INT_MIN on error (sets *out_exception).
int  dom_range_compare_boundary_points(const DomRange* r, DomRangeCompareHow how,
                                       const DomRange* other, const char** out_exception);

// Returns -1 (before start), 0 (in range), 1 (after end), or INT_MIN on error.
int  dom_range_compare_point(const DomRange* r, DomNode* node, uint32_t offset, const char** out_exception);
bool dom_range_is_point_in_range(const DomRange* r, DomNode* node, uint32_t offset);
bool dom_range_intersects_node(const DomRange* r, DomNode* node);

DomRange* dom_range_clone(const DomRange* r);

// Stringify the range per WHATWG Range.toString(): walks all text nodes
// intersecting the range and concatenates the contained portions.
// Returns a malloc'd, NUL-terminated UTF-8 string (caller must free).
// Returns NULL only on allocation failure; for an empty result, returns a
// valid empty string.
char* dom_range_to_string(const DomRange* r);

// Phase 8B: stringification mode. RAW matches DOM Range.toString(); RENDERED
// matches Selection.toString() and skips text excluded by CSS visibility
// (`user-select: none`, `content-visibility: hidden`) or by the "not
// rendered as text" tag list (<script>, <style>, <head>, ...).
typedef enum {
    DOM_STRINGIFY_RAW = 0,
    DOM_STRINGIFY_RENDERED = 1,
} DomStringifyMode;
char* dom_range_to_string_ex(const DomRange* r, DomStringifyMode mode);

// ============================================================================
// DomSelection — the document's editing selection (also the caret)
// ============================================================================
//
// A collapsed DomSelection IS the canonical caret boundary. Presentation
// details live in the StateStore projection while legacy render paths remain.
//
// The spec allows multiple ranges, but every WPT test we need to pass and
// every mainstream browser only uses 0 or 1. We support range_count ∈ {0,1}
// rigorously and ignore additional `addRange()` calls (matching Chromium).

typedef enum DomSelectionDirection {
    DOM_SEL_DIR_NONE     = 0,
    DOM_SEL_DIR_FORWARD  = 1,  // anchor before focus
    DOM_SEL_DIR_BACKWARD = 2,  // anchor after focus
} DomSelectionDirection;

typedef enum EditingSelectionKind {
    EDIT_SEL_NONE = 0,
    EDIT_SEL_DOM_RANGE,
    EDIT_SEL_TEXT_CONTROL
} EditingSelectionKind;

typedef struct EditingSelection {
    EditingSelectionKind kind;
    DomSelectionDirection direction;
    DomRange* range;
    DomElement* control;
    uint32_t start_u16;
    uint32_t end_u16;
    uint32_t mutation_seq;
} EditingSelection;

#define DOM_SELECTION_MAX_RANGES 1   // see comment above

typedef struct DomSelection {
    DocState* state;
    DomRange*     ranges[DOM_SELECTION_MAX_RANGES];
    uint32_t      range_count;          // 0 or 1
    DomSelectionDirection direction;

    // Document root captured when the current range was added (or its
    // boundaries first set). Used by Range mutators to detect the
    // "selection range moved into a different root" condition required
    // by selection-api/move-selection-range-into-different-root.tentative
    // — when the active range's new root differs, drop it from the
    // selection (rangeCount → 0) per Chromium-compatible behavior.
    DomNode*      associated_doc_root;

    // Host-binding back-pointer (e.g. JS wrapper Item). Managed by the
    // binding layer.
    void*         host_wrapper;
} DomSelection;

DomSelection* dom_selection_create(DocState* state);

// Accessors
DomBoundary dom_selection_anchor_boundary(const DomSelection* s);
DomBoundary dom_selection_focus_boundary (const DomSelection* s);
DomNode* dom_selection_anchor_node  (const DomSelection* s);
uint32_t dom_selection_anchor_offset(const DomSelection* s);
DomNode* dom_selection_focus_node   (const DomSelection* s);
uint32_t dom_selection_focus_offset (const DomSelection* s);
bool     dom_selection_is_collapsed (const DomSelection* s);
uint32_t dom_selection_range_count  (const DomSelection* s);
const char* dom_selection_type      (const DomSelection* s);  // "None" | "Caret" | "Range"

// Range management
DomRange* dom_selection_get_range_at  (DomSelection* s, uint32_t index, const char** out_exception);
void      dom_selection_add_range     (DomSelection* s, DomRange* range);
void      dom_selection_remove_range  (DomSelection* s, DomRange* range);
void      dom_selection_remove_all_ranges(DomSelection* s);
void      dom_selection_empty         (DomSelection* s);  // alias

// Boundary mutation (spec methods)
bool dom_selection_collapse(DomSelection* s, DomNode* node, uint32_t offset, const char** out_exception);
bool dom_selection_set_position(DomSelection* s, DomNode* node, uint32_t offset, const char** out_exception);
void dom_selection_collapse_to_start(DomSelection* s, const char** out_exception);
void dom_selection_collapse_to_end(DomSelection* s, const char** out_exception);
bool dom_selection_extend(DomSelection* s, DomNode* node, uint32_t offset, const char** out_exception);
bool dom_selection_set_base_and_extent(DomSelection* s,
                                       DomNode* anchor_node, uint32_t anchor_offset,
                                       DomNode* focus_node,  uint32_t focus_offset,
                                       const char** out_exception);
bool dom_selection_select_all_children(DomSelection* s, DomNode* node, const char** out_exception);
bool dom_selection_contains_node(const DomSelection* s, DomNode* node, bool allow_partial);

// Browser-style selectAll boundary discovery used by editing commands.
// Trims whitespace-only edge text, skips non-selectable subtrees, and treats
// rendered atomic nodes such as <br> and <table> as selectable edge stops.
bool dom_selection_compute_select_all_boundaries(DomNode* root,
                                                 DomBoundary* out_start,
                                                 DomBoundary* out_end);

// If `node` is inside an effective user-select: all subtree, returns the
// selectable content range for the nearest such element.
bool dom_selection_user_select_all_range_for_node(DomNode* node,
                                                  DomBoundary* out_start,
                                                  DomBoundary* out_end);

// Browser-style triple-click range discovery for rich editable content.
// For table cells, the range is constrained to the hit cell's selectable text.
bool dom_selection_triple_click_range_for_node(DomNode* node,
                                               DomBoundary* out_start,
                                               DomBoundary* out_end);

// ============================================================================
// Live-range list management (called by mutation hooks; minimal stubs in
// Phase 1 — full implementation in a later phase).
// ============================================================================
void dom_range_link_into_state(DocState* state, DomRange* range);
void dom_range_unlink_from_state(DocState* state, DomRange* range);
void dom_state_invalidate_all_range_layouts(DocState* state);

// ============================================================================
// DOM Mutation envelopes (Phase 3) — adjust live ranges per WHATWG DOM §5.3
//
// These are called by the binding layer immediately around tree- and text-
// mutating operations. Each walks `state->live_ranges` and adjusts boundary
// points per spec, then re-syncs the document's selection. They are safe to
// call when there is no state, no live ranges, or no selection.
// ============================================================================

// Call BEFORE removing `child` from its parent. Captures parent + index
// internally and adjusts ranges/selection per the "removing steps".
void dom_mutation_pre_remove(DocState* state, DomNode* child);

// Call AFTER inserting a single `node` into `parent` (i.e. node->parent == parent
// and dom_node_child_index(node) is its final position). Adjusts ranges per
// the "insertion steps" (shift offsets > index by 1).
void dom_mutation_post_insert(DocState* state, DomNode* parent, DomNode* node);

// Apply the spec's "replace data" boundary-point adjustments to all ranges
// pointing into `text`. `offset` and `count` are UTF-16 code-unit positions
// (the same units used in DomBoundary::offset for text nodes). `replacement_len`
// is the UTF-16 code-unit length of the inserted replacement.
// Call AFTER mutating the text node's `text`/`length`/`native_string`.
void dom_mutation_text_replace_data(DocState* state, DomText* text,
                                    uint32_t offset, uint32_t count,
                                    uint32_t replacement_len);

// Apply the "split a Text node" range-adjustment steps. Call AFTER inserting
// `new_node` into `original`'s parent (so it is at index_of_original + 1)
// AND BEFORE truncating `original`'s data to `offset`. `offset` is a UTF-16
// code-unit position into `original`.
//
// Order of operations performed by this helper:
//   1. Move endpoints inside `original` past `offset` to `new_node`.
//   2. Bump endpoints in original->parent at index >= index_of_new_node
//      to account for the insertion (delegates to dom_mutation_post_insert).
void dom_mutation_text_split(DocState* state, DomText* original,
                             DomText* new_node, uint32_t offset);

// Apply the boundary adjustments for normalize() merging `next` into `prev`.
// `prev_u16_len` is the UTF-16 length of `prev` BEFORE the merge (i.e. the
// offset within the merged node where `next`'s data was appended). Endpoints
// inside `next` are retargeted to `prev` with offset+=prev_u16_len. Caller
// must still subsequently call dom_mutation_pre_remove(state, next) and
// remove `next` from its parent.
void dom_mutation_text_merge(DocState* state, DomText* prev,
                             DomText* next, uint32_t prev_u16_len);

// ============================================================================
// Phase 4 — Range mutation methods (WHATWG DOM §5.5)
//
// Each function returns true on success. On failure, *out_exception (if
// non-null) is set to a stable DOMException name string ("InvalidStateError",
// "HierarchyRequestError", "InvalidNodeTypeError", etc.).
// ============================================================================

// Build a new DocumentFragment — a `DomElement` whose tag_name is
// "#document-fragment". Belongs to `doc`'s arena. Returns nullptr if doc
// is null. Used as the return value of clone/extractContents.
struct DomElement* dom_document_fragment_create(struct DomDocument* doc);

// Clone a node. `deep`==true clones descendants too. Cloned subtree is
// detached (no parent) and lives in `node`'s document arena.
struct DomNode* dom_node_clone(struct DomNode* node, bool deep);

// Split a DomText at UTF-16 `offset`. Returns the newly-created right-half
// text node, which is inserted as `original`'s next sibling. Both nodes
// share the parent of `original` afterwards. Internally:
//   1. allocates a new DomText for the right half;
//   2. inserts it as `original`'s next sibling;
//   3. truncates `original`'s data to `offset`;
//   4. fires `dom_mutation_text_split` envelope.
// Returns nullptr if `original` has no parent or `offset` is out of bounds.
struct DomText* dom_text_split_at(DocState* state, struct DomText* original,
                                  uint32_t offset);

// Range methods —---------------------------------------------------------
bool dom_range_delete_contents(DomRange* r, const char** out_exception);

// Returns the new DocumentFragment (or nullptr on failure).
struct DomElement* dom_range_extract_contents(DomRange* r,
                                              const char** out_exception);
struct DomElement* dom_range_clone_contents (DomRange* r,
                                              const char** out_exception);

// Insert `node` at the start of `r`. `node` is detached from its current
// parent first. After insertion, the range is updated per spec.
bool dom_range_insert_node(DomRange* r, struct DomNode* node,
                           const char** out_exception);

// surroundContents(node): wrap range contents inside `node`. `node` must be
// childless on entry. Throws InvalidStateError if range partially contains
// non-Text nodes.
bool dom_range_surround_contents(DomRange* r, struct DomNode* node,
                                 const char** out_exception);

// Selection.deleteFromDocument — delete the contents of every range.
void dom_selection_delete_from_document(DomSelection* s);

// ============================================================================
// Phase 5 — Selection.modify & word breaking
//
// Move or extend the selection by one unit of `granularity` in `direction`.
// `alter` ∈ {"move", "extend"} (case-insensitive).
// `direction` ∈ {"forward", "backward", "left", "right"} — left/right map to
//             backward/forward respectively (LTR-only assumption for now).
// `granularity` ∈ {"character", "word", "line", "lineboundary",
//                  "paragraph", "paragraphboundary",
//                  "sentence", "sentenceboundary", "documentboundary"}.
// Per spec, modify() does nothing if the selection is empty (no ranges).
// Returns true on success, false on bad arguments. *out_exception is set
// only on hard errors.
bool dom_selection_modify(DomSelection* s, const char* alter,
                          const char* direction, const char* granularity,
                          const char** out_exception);

// Move a (node, u16_offset) boundary by `count` units of granularity.
// `count > 0` moves forward, `count < 0` backward. Returns the new boundary.
// Used internally by dom_selection_modify and exposed for tests.
//
// Granularity supported:
//  - DOM_MOD_CHARACTER : single grapheme-ish step (UTF-16 code units; surrogates skipped together)
//  - DOM_MOD_WORD      : skip to next word boundary using a simple
//                        alphanumeric-vs-other classifier
//  - DOM_MOD_DOCUMENT  : jump to root start (count<0) or root end (count>0)
enum DomModGranularity {
    DOM_MOD_CHARACTER = 0,
    DOM_MOD_WORD      = 1,
    DOM_MOD_DOCUMENT  = 2,
};
struct DomBoundary dom_boundary_move(struct DomBoundary b,
                                     DomModGranularity gran, int32_t count);

#ifdef __cplusplus
}  // extern "C"
#endif

#endif  // RADIANT_DOM_RANGE_HPP
